--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="save_note">Save icon</string>
+    <string name="delete_note">Delete note</string>
+    <string name="share_note">Share note</string>
+    <string name="note_details">Note details</string>
+    <string name="notes_list">Notes list</string>
+    <string name="add_note">Add note</string>
+    <string name="communicate">Communicate</string>
+    <string name="about">About</string>
+    <string name="settings">Settings</string>
+    <string name="app_logo">App logo</string>
+    <string name="open_drawer">Open drawer</string>
+    <string name="close_drawer">Close drawer</string>
+    <string name="made_by">Made by</string>
+    <string name="github">GitHub</string>
+    <string name="github_repository">GitHub repository</string>
+    <string name="send_me_email">Send me email</string>
+    <string name="send_feedback">Send feedback</string>
 </resources>
