ДЗ к 12 уроку Подключен Firebase Добавлена атворизация через Google Данные хранятся в Firestore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="note_not_deleted">Note not deleted</string>
     <string name="edit_note">Edit</string>
     <string name="btn_save">Save</string>
+    <string name="btn_update">Update</string>
+    <string name="action_list">Notes</string>
 </resources>
